add tag generator inside manageveriant

--- a/managevariant.html
+++ b/managevariant.html
@@ -1243,6 +1243,7 @@
                         <div class="inputbox">
                           <label for="option-2" class="inputlabel">Option Values</label>
                           <input type="text" id="option-2" class="inputfield" placeholder="e.g. Small,Medium,Large">
+                          <p class="error-message">This field is required!!</p>
                         </div>
 
                         <div class="closebox">
@@ -1274,6 +1275,7 @@
                         <div class="inputbox">
                           <label for="option-4" class="inputlabel">Option Values</label>
                           <input type="text" id="option-4" class="inputfield" placeholder="e.g. Small,Medium,Large">
+                          <p class="error-message">This field is required!!</p>
                         </div>
 
                         <div class="closebox">
@@ -1305,6 +1307,7 @@
                         <div class="inputbox">
                           <label for="option-6" class="inputlabel">Option Values</label>
                           <input type="text" id="option-6" class="inputfield" placeholder="e.g. Small,Medium,Large">
+                          <p class="error-message">This field is required!!</p>
                         </div>
 
                         <div class="closebox">
@@ -1334,8 +1337,8 @@
                     <div class="col-xl-6 col-12">
                       <div class="infobox">
                         <div class="inputbox">
-                          <label for="option-2" class="inputlabel">Option Values</label>
-                          <input type="text" id="option-2" class="inputfield" placeholder="e.g. Small,Medium,Large">
+                          <label for="option-8" class="inputlabel">Option Values</label>
+                          <input type="text" id="option-8" class="inputfield" placeholder="e.g. Small,Medium,Large">
                         </div>
 
                         <div class="closebox">
@@ -1494,5 +1497,6 @@
   <script src="https://cdn.datatables.net/v/bs5/dt-1.12.1/datatables.min.js"></script>
   <!--========== TABLE JS ============-->
   <script src="assets/js/table/table.js"></script>
+  <script src="assets/js/tag-generator/tag-generator.js"></script>
 </body>
 </html>
