--- a/product-list.html
+++ b/product-list.html
@@ -1430,7 +1430,7 @@
                 </td>
                 <td>
                   <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" role="switch" id="switch-1" checked>
+                    <input class="form-check-input" type="checkbox" role="switch" id="switch-1">
                     <label class="form-check-label" for="switch-1"></label>
                   </div>
                 </td>
