--- a/filter-list.html
+++ b/filter-list.html
@@ -1227,7 +1227,7 @@
 
             <ul class="iconlist">
               <li class="iconlist-item">
-                <button type="button" class="iconlist-link">
+                <button type="button" class="iconlist-link" type="button" data-bs-toggle="modal" data-bs-target="#createModal">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path opacity="0.4" d="M16.6643 21.9897H7.33488C5.88835 22.0796 4.46781 21.5781 3.3989 20.6011C2.4219 19.5312 1.92041 18.1107 2.01032 16.6652V7.33482C1.92041 5.88932 2.4209 4.46878 3.3979 3.39889C4.46781 2.42189 5.88835 1.92041 7.33488 2.01032H16.6643C18.1089 1.92041 19.5284 2.4209 20.5973 3.39789C21.5733 4.46878 22.0758 5.88832 21.9899 7.33482V16.6652C22.0788 18.1107 21.5783 19.5312 20.6013 20.6011C19.5314 21.5781 18.1109 22.0796 16.6643 21.9897Z" fill="#6A7081"/>
                     <path d="M15.1047 11.1852L12.7993 11.1953L12.7897 8.89055C12.7885 8.44785 12.4273 8.08962 11.9846 8.09207C11.54 8.0926 11.1838 8.45312 11.1856 8.89643L11.1946 11.2018L8.88786 11.2106C8.44456 11.2124 8.0883 11.5742 8.08884 12.0162C8.09133 12.4589 8.45253 12.8171 8.89457 12.8153L11.2019 12.8059L11.2108 15.1074C11.2126 15.5507 11.5738 15.9089 12.0159 15.9058C12.2382 15.9056 12.4374 15.8153 12.582 15.6695C12.7272 15.5231 12.8158 15.3231 12.8149 15.1015L12.8053 12.7994L15.112 12.7893C15.3336 12.7884 15.5329 12.6981 15.6775 12.5523C15.822 12.4066 15.9106 12.2053 15.9104 11.9843C15.9085 11.541 15.548 11.1834 15.1047 11.1852Z" fill="#6A7081"/>
@@ -1776,7 +1776,7 @@
 
   <!--========== CREATE-FILTER MODAL START ==============-->
   <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="createModalLabel">Create Filter</h5>
@@ -1797,7 +1797,7 @@
 
   <!--========== EDIT-FILTER MODAL START ==============-->
   <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="editModalLabel">Edit Filter</h5>
@@ -1818,7 +1818,7 @@
 
   <!--========== DELETE-FILTER MODAL START ==============-->
   <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="deleteModalLabel">Modal title</h5>
@@ -1840,7 +1840,7 @@
 
   <!--========== CONFIRMED-DELETE-FILTER MODAL START ==============-->
   <div class="modal fade" id="confirmedDeleteModal" tabindex="-1" aria-labelledby="confirmedDeleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="confirmedDeleteModalLabel">Modal title</h5>
